[gd_scene load_steps=7 format=3 uid="uid://bbd1kl4wqhviw"]

[ext_resource type="Theme" uid="uid://d127l2ae8xndx" path="res://themes/rare_theme.tres" id="1_1hloh"]
[ext_resource type="Script" uid="uid://cjol7u1q5gni7" path="res://mutator_card.gd" id="2_ocsxu"]

[sub_resource type="Animation" id="Animation_nep74"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_uc4lw"]
resource_name = "exit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_0ede3"]
resource_name = "hover"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uc4lw"]
_data = {
&"RESET": SubResource("Animation_nep74"),
&"exit": SubResource("Animation_uc4lw"),
&"hover": SubResource("Animation_0ede3")
}

[node name="small_mutator_card" type="Control"]
custom_minimum_size = Vector2(150, 220)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
theme = ExtResource("1_1hloh")
script = ExtResource("2_ocsxu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 150.0
offset_bottom = 220.0
pivot_offset = Vector2(125, 183)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 10.000001
offset_top = 15.0
offset_right = 140.0
offset_bottom = 208.0
pivot_offset = Vector2(115, 0)
theme_override_constants/separation = 0

[node name="name" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 15
text = "Kartya Neve"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="desc" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_type_variation = &"HeaderMedium"
theme_override_font_sizes/font_size = 11
text = "leiras..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="stat" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 9
text = "stat"
horizontal_alignment = 1
autowrap_mode = 2

[node name="select" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(80, 35)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
mouse_filter = 1
theme_override_font_sizes/font_size = 13
text = "SELECT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_uc4lw")
}

[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_panel_mouse_exited"]
[connection signal="pressed" from="Panel/VBoxContainer/select" to="." method="_on_select_pressed"]
